--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "4    1 vehicle  1994  Collision         No  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
        "0.06366834517486376"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
        "0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "Year                1995.0   1996.00   1996.0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
        "        <Axes: title={'center': 'Year'}>]], dtype=object)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1079,7 @@
        "Name: AgeOfPolicyHolder, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
        "1516           no change    1 vehicle  1994  All Perils           0  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -1388,17 +1388,20 @@
    "source": [
     "##### Dropping PolicyNumber as it is irrelevant to fraud detection and dropped PolicyType due to perfect correlation to BasePolicy and VehicleCategory feature.\n",
     "\n",
-    "##### In the EDA section, we also discovered that there are 320 rows where age == 0 which is not possible. However, these rows only appear in rows where AgeOfPolicyHolder == '16 to 17', so we will impute the errorneous data to 16.5"
+    "##### In the EDA section, we also discovered that there are 320 rows where age == 0 which is not possible. However, these rows only appear in rows where AgeOfPolicyHolder == '16 to 17', so we will impute the errorneous data to 16.5\n",
+    "\n",
+    "##### We will also drop the one row where monthclaimed == 0 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df.drop(columns=['PolicyNumber',\"PolicyType\"])\n",
-    "df['Age'] =df['Age'].replace({0:16.5})"
+    "df['Age'] =df['Age'].replace({0:16.5})\n",
+    "df = df[df[\"MonthClaimed\"]!='0']"
    ]
   },
   {
@@ -1410,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1449,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1514,8 +1517,8 @@
        "      <td>3</td>\n",
        "      <td>Honda</td>\n",
        "      <td>Urban</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>Female</td>\n",
        "      <td>Single</td>\n",
@@ -1548,8 +1551,8 @@
        "      <td>3</td>\n",
        "      <td>Honda</td>\n",
        "      <td>Urban</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>Male</td>\n",
        "      <td>Single</td>\n",
@@ -1582,8 +1585,8 @@
        "      <td>5</td>\n",
        "      <td>Honda</td>\n",
        "      <td>Urban</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
        "      <td>2</td>\n",
        "      <td>Male</td>\n",
        "      <td>Married</td>\n",
@@ -1615,14 +1618,14 @@
       ],
       "text/plain": [
        "   Month  WeekOfMonth  DayOfWeek   Make AccidentArea  DayOfWeekClaimed  \\\n",
-       "0     12            5          3  Honda        Urban               2.0   \n",
-       "1      1            3          3  Honda        Urban               1.0   \n",
-       "2     10            5          5  Honda        Urban               4.0   \n",
+       "0     12            5          3  Honda        Urban                 2   \n",
+       "1      1            3          3  Honda        Urban                 1   \n",
+       "2     10            5          5  Honda        Urban                 4   \n",
        "\n",
        "   MonthClaimed  WeekOfMonthClaimed     Sex MaritalStatus   Age  \\\n",
-       "0           1.0                   1  Female        Single  21.0   \n",
-       "1           1.0                   4    Male        Single  34.0   \n",
-       "2          11.0                   2    Male       Married  47.0   \n",
+       "0             1                   1  Female        Single  21.0   \n",
+       "1             1                   4    Male        Single  34.0   \n",
+       "2            11                   2    Male       Married  47.0   \n",
        "\n",
        "           Fault VehicleCategory  VehiclePrice  RepNumber  Deductible  \\\n",
        "0  Policy Holder           Sport             6         12         300   \n",
@@ -1650,7 +1653,7 @@
        "2           0  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1687,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1704,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1734,7 @@
     "    'Internal' : 0,\n",
     "    'External' : 1\n",
     "    })\n",
-    "df4.to_csv(r\"C:\\Users\\USER\\Downloads\\BT4012\\asdf.csv\", index=False)\n"
+    "# df4.to_csv(r\"C:\\Users\\USER\\Downloads\\BT4012\\asdf.csv\", index=False)\n"
    ]
   },
   {
@@ -1743,14 +1746,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set shape: (12336, 55) (12336,)\n",
+      "Training set shape: (12335, 55) (12335,)\n",
       "Validation set shape: (1542, 55) (1542,)\n",
       "Test set shape: (1542, 55) (1542,)\n"
      ]
