fixed some bugs to start training

--- a/few_shot_classifier_tutorial.ipynb
+++ b/few_shot_classifier_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,10 @@
     "from tqdm import tqdm\n",
     "\n",
     "from easyfsl.samplers import TaskSampler\n",
-    "from easyfsl.utils import sliding_average\n",
+    "from easyfsl.utils import evaluate\n",
+    "from easyfsl.methods import FewShotClassifier, PrototypicalNetworks\n",
+    "\n",
+    "from statistics import mean\n",
     "\n",
     "from get_processed_data import get_processed_data"
    ]
@@ -33,43 +36,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training set shape: (12335, 55) (12335,)\n",
-      "Validation set shape: (1542, 55) (1542,)\n",
-      "Test set shape: (1542, 55) (1542,)\n",
-      "724 11611\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df, X_train, y_train, X_val, y_val, X_test, y_test = get_processed_data()\n",
     "\n",
     "train_df = X_train.copy()\n",
     "train_df['Fraud'] = y_train\n",
-    "train_df['Normal'] = 1 - y_train\n",
+    "# train_df['Normal'] = 1 - y_train\n",
     "\n",
     "validation_df = X_val.copy()\n",
     "validation_df['Fraud'] = y_val\n",
-    "validation_df['Normal'] = 1 - y_val\n",
+    "# validation_df['Normal'] = 1 - y_val\n",
     "\n",
     "test_df = X_test.copy()\n",
     "test_df['Fraud'] = y_test\n",
-    "test_df['Normal'] = 1 - y_test\n",
-    "\n",
-    "ones = 0\n",
-    "zeroes = 0\n",
-    "for y in y_train:\n",
-    "    if y == 1:\n",
-    "        ones += 1\n",
-    "    else:\n",
-    "        zeroes += 1\n",
-    "print(ones, zeroes)"
+    "# test_df['Normal'] = 1 - y_test"
    ]
   },
   {
@@ -81,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,6 +79,7 @@
     "    def __len__ (self):\n",
     "        return len(self.dataframe)\n",
     "    \n",
+    "    ## Returns Tensor(features), int(label)\n",
     "    def __getitem__ (self, index):\n",
     "        relevant_row = self.dataframe.iloc[index, :].values\n",
     "        features = relevant_row[ : self.label_idx]\n",
@@ -104,7 +88,7 @@
     "        if self.transformation != None:\n",
     "            features = self.transformation(features)\n",
     "        \n",
-    "        return torch.Tensor(features), torch.Tensor([label])\n",
+    "        return torch.Tensor(features), int(label)\n",
     "    \n",
     "    ## Required to use EasyFSL methods; returns a list of dataset's labels (TBC)\n",
     "    def get_labels (self):      \n",
@@ -122,10 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## TODO: Review implementation\n",
+    "    ## Can probably use EasyFSL's class, but implement own feature extractor\n",
+    "    ## Possible options for backbone: ... (Maybe can make do without?)\n",
+    "\n",
     "class PrototypicalNetwork (nn.Module):\n",
     "    def __init__(self, backbone: nn.Module):\n",
     "        super(PrototypicalNetwork, self).__init__()\n",
@@ -154,7 +142,23 @@
     "        dists = torch.cdist(z_query, z_proto)\n",
     "        classification_scores = -dists ## Smaller distance -> Higher score\n",
     "\n",
-    "        return classification_scores ## To be compared to actual query labels"
+    "        return classification_scores ## To be compared to actual query labels\n",
+    "    \n",
+    "\n",
+    "class DummyNetwork(nn.Module):\n",
+    "    def __init__(self, in_dim, hidden_dim, out_dim):\n",
+    "        super(DummyNetwork, self).__init__()\n",
+    "        self.linear1 = nn.Linear(in_dim, hidden_dim)\n",
+    "        self.linear2 = nn.Linear(hidden_dim, out_dim)\n",
+    "        # self.linear1.weight = torch.nn.Parameter(torch.zeros(in_dim, hidden_dim))\n",
+    "        # self.linear1.bias = torch.nn.Parameter(torch.ones(hidden_dim))\n",
+    "        # self.linear2.weight = torch.nn.Parameter(torch.zeros(hidden_dim, out_dim))\n",
+    "        # self.linear2.bias = torch.nn.Parameter(torch.ones(out_dim))\n",
+    "\n",
+    "    def forward(self, input_array):\n",
+    "        h = self.linear1(input_array)\n",
+    "        y_pred = self.linear2(h)\n",
+    "        return y_pred"
    ]
   },
   {
@@ -180,13 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Represents one epoch / episode of multiple tasks\n",
     "    ## Each epoch produces a new model\n",
-    "def training_epoch (model, data_loader: DataLoader, optimizer: Optimizer, loss_fn):\n",
+    "def training_epoch (model, data_loader: DataLoader, optimizer: Optimizer, loss_fn, implementation = 'easyfsl'):\n",
     "    all_loss = []\n",
     "    model.train()\n",
     "\n",
@@ -194,18 +198,28 @@
     "        ## For each task, make prediction, calculate loss, update model params\n",
     "        for task_idx, (support_data, support_labels, query_data, query_labels, _) in tqdm_train:\n",
     "                       \n",
+    "            # print(f'Starting task {task_idx}')\n",
+    "            # print('support_data: ', support_data)\n",
+    "            # print('support_labels: ', support_labels)\n",
+    "            \n",
     "            optimizer.zero_grad()\n",
-    "            classification_scores = model.forward(support_data, support_labels, query_data) ##TODO: Define method\n",
+    "\n",
+    "            if implementation == 'easyfsl':\n",
+    "                model.process_support_set(support_data, support_labels)\n",
+    "                classification_scores = model.forward(query_data)\n",
+    "            else:\n",
+    "                classification_scores = model.forward(support_data, support_labels, query_data) ##TODO: Define method\n",
+    "            \n",
     "\n",
     "            task_loss = loss_fn(classification_scores, query_labels)\n",
     "            task_loss.backward()\n",
     "            optimizer.step()\n",
     "\n",
-    "            all_loss.append(task_loss)\n",
+    "            all_loss.append(task_loss.item())\n",
     "\n",
-    "            tqdm_train.set_postfix(loss = all_loss.mean())\n",
+    "            tqdm_train.set_postfix(loss = mean(all_loss))\n",
     "    \n",
-    "    return all_loss.mean()"
+    "    return mean(all_loss)"
    ]
   },
   {
@@ -217,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,18 +243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Disclaimer: It is assumed that the label is the last column of the input dataframe... ...\n",
-      "Disclaimer: It is assumed that the label is the last column of the input dataframe... ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N_WAY = 2\n",
     "N_SHOT = 5\n",
@@ -290,11 +295,13 @@
     "\n",
     "\n",
     "## Optimizer\n",
-    "model = None ##TODO: Implement model\n",
+    "backbone = DummyNetwork(in_dim = len(X_train.columns), hidden_dim = 256, out_dim = 4) ## TODO: What should the correct dimensions be?\n",
+    "model = PrototypicalNetworks(backbone)\n",
+    "\n",
     "LEARNING_RATE = 0.001\n",
     "MOMENTUM = 0.9\n",
     "DECAY = 5e-4\n",
-    "train_optimizer = optim.SGD(model.parameters(), lr = LEARNING_RATE, momentum = MOMENTUM, \n",
+    "train_optimizer = optim.SGD(params = model.parameters(), lr = LEARNING_RATE, momentum = MOMENTUM, \n",
     "                            weight_decay = DECAY)\n",
     "train_scheduler = MultiStepLR(optimizer = train_optimizer, milestones = scheduler_milestones,\n",
     "                              gamma = scheduler_gamma)\n",
@@ -328,8 +335,8 @@
     "for epoch in range(N_EPOCHS):\n",
     "    print(f'Epoch: {epoch}')\n",
     "    \n",
-    "    average_epoch_loss = training_epoch(model, train_loader, train_optimizer)\n",
-    "    validation_accuracy = evaluate(model, validation_loader) \n",
+    "    average_epoch_loss = training_epoch(model, train_loader, train_optimizer, LOSS_FN)\n",
+    "    validation_accuracy = evaluate(model, validation_loader, device = 'cpu') ## TODO: Implement evaluate method that returns [actual_labels], [predictions]\n",
     "\n",
     "    if validation_accuracy > best_validation_accuracy:\n",
     "        best_validation_accuracy = validation_accuracy\n",
@@ -360,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate(model, test_loader) ##TODO: Implement method"
+    "# evaluate(model, test_loader) ##TODO: Implement method"
    ]
   }
  ],
