--- a/k_nearest_neighbours.ipynb
+++ b/k_nearest_neighbours.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "\n",
     "\n",
-    "from get_processed_data import get_processed_data"
+    "from get_processed_data import get_processed_data\n",
+    "from show_metrics import show_metrics"
    ]
   },
   {
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +69,7 @@
        "Text(0, 0.5, 'Error Rate')"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -109,13 +110,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "knn = KNeighborsClassifier(n_neighbors=4)\n",
     "knn.fit(X_train,y_train)\n",
-    "pred = knn.predict(X_test)"
+    "y_pred = knn.predict(X_test)"
    ]
   },
   {
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,27 +145,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "          No       0.93      1.00      0.97      1439\n",
-      "         Yes       0.75      0.03      0.06       103\n",
-      "\n",
-      "    accuracy                           0.93      1542\n",
-      "   macro avg       0.84      0.51      0.51      1542\n",
-      "weighted avg       0.92      0.93      0.91      1542\n",
-      "\n"
+      "Accuracy: 0.9345006485084306\n",
+      "Precision: 0.75\n",
+      "Recall: 0.02912621359223301\n",
+      "Specificity: 0.9993050729673384\n",
+      "F1_score: 0.056074766355140186\n"
      ]
     }
    ],
    "source": [
-    "confusion_matrix = confusion_matrix(y_test,pred)\n",
-    "\n",
-    "display = ConfusionMatrixDisplay(confusion_matrix = confusion_matrix, display_labels = [False, True])\n",
-    "\n",
-    "display.plot()\n",
-    "plt.show()\n",
-    "\n",
-    "print(classification_report(y_test,pred))\n"
+    "show_metrics(y_test, y_pred)"
    ]
   }
  ],
