--- a/few_shot_classifier_tutorial.ipynb
+++ b/few_shot_classifier_tutorial.ipynb
@@ -12,9 +12,8 @@
     "\n",
     "import torch\n",
     "from torch import nn, optim\n",
-    "from torch.optim import SGD, Optimizer\n",
     "from torch.optim.lr_scheduler import MultiStepLR\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch.utils.data import DataLoader\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from tqdm import tqdm\n",
     "\n",
@@ -24,7 +23,10 @@
     "\n",
     "from statistics import mean\n",
     "\n",
-    "from get_processed_data import get_processed_data"
+    "from get_processed_data import get_processed_data\n",
+    "from FSLMethods import training_epoch, evaluate_model\n",
+    "from FSLDataset import FSLDataset\n",
+    "from FSLNetworks import DummyNetwork"
    ]
   },
   {
@@ -59,112 +61,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Custom dataset object"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Needs to be a FewShotDataset / torch Dataset with .get_labels; consider using WrapFewShotDataset?\n",
-    "class FSLDataset (Dataset):\n",
-    "    def __init__ (self, dataframe, label_idx = -1, transformation = None):\n",
-    "        self.dataframe = dataframe\n",
-    "        self.transformation = transformation\n",
-    "        self.label_idx = label_idx\n",
-    "        print('Disclaimer: It is assumed that the label is the last column of the input dataframe... ...')\n",
-    "\n",
-    "    def __len__ (self):\n",
-    "        return len(self.dataframe)\n",
-    "    \n",
-    "    ## Returns Tensor(features), int(label)\n",
-    "    def __getitem__ (self, index):\n",
-    "        relevant_row = self.dataframe.iloc[index, :].values\n",
-    "        features = relevant_row[ : self.label_idx]\n",
-    "        label = relevant_row[self.label_idx]\n",
-    "\n",
-    "        if self.transformation != None:\n",
-    "            features = self.transformation(features)\n",
-    "        \n",
-    "        return torch.Tensor(features), int(label)\n",
-    "    \n",
-    "    ## Required to use EasyFSL methods; returns a list of dataset's labels (TBC)\n",
-    "    def get_labels (self):      \n",
-    "        ret_list = self.dataframe.iloc[ : , self.label_idx]\n",
-    "\n",
-    "        return ret_list.tolist()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Prototypical network"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## TODO: Review implementation\n",
-    "    ## Can probably use EasyFSL's class, but implement own feature extractor\n",
-    "    ## Possible options for backbone: ... (Maybe can make do without?)\n",
-    "\n",
-    "class PrototypicalNetwork (nn.Module):\n",
-    "    def __init__(self, backbone: nn.Module):\n",
-    "        super(PrototypicalNetwork, self).__init__()\n",
-    "        self.backbone = backbone\n",
-    "\n",
-    "    ## Predict query labels using labelled support data\n",
-    "    def forward (self, support_data: torch.Tensor, support_labels: torch.Tensor, \n",
-    "                 query_data: torch.Tensor) -> torch.Tensor:\n",
-    "        ## Extract features / embedding of support and query data (using backbone)\n",
-    "        z_support = self.backbone.forward(support_data)\n",
-    "        z_query = self.backbone.forward(query_data)\n",
-    "\n",
-    "        ## Infer no. of unique classes from support set labels\n",
-    "        n_way = len(torch.unique(support_labels))\n",
-    "\n",
-    "        ## Construct prototypes\n",
-    "            ## Prototype i = Mean of embeddings of all support data with label i\n",
-    "        z_proto = torch.cat(\n",
-    "            [\n",
-    "                z_support[torch.nonzero(support_labels == label)].mean(0) \\\n",
-    "                    for label in range(n_way)\n",
-    "            ]\n",
-    "        )\n",
-    "\n",
-    "        ## Compute euclidean distance from query data to prototypes, and classification scores\n",
-    "        dists = torch.cdist(z_query, z_proto)\n",
-    "        classification_scores = -dists ## Smaller distance -> Higher score\n",
-    "\n",
-    "        return classification_scores ## To be compared to actual query labels\n",
-    "    \n",
-    "\n",
-    "class DummyNetwork(nn.Module):\n",
-    "    def __init__(self, in_dim, hidden_dim, out_dim):\n",
-    "        super(DummyNetwork, self).__init__()\n",
-    "        self.linear1 = nn.Linear(in_dim, hidden_dim)\n",
-    "        self.linear2 = nn.Linear(hidden_dim, out_dim)\n",
-    "        # self.linear1.weight = torch.nn.Parameter(torch.zeros(in_dim, hidden_dim))\n",
-    "        # self.linear1.bias = torch.nn.Parameter(torch.ones(hidden_dim))\n",
-    "        # self.linear2.weight = torch.nn.Parameter(torch.zeros(hidden_dim, out_dim))\n",
-    "        # self.linear2.bias = torch.nn.Parameter(torch.ones(out_dim))\n",
-    "\n",
-    "    def forward(self, input_array):\n",
-    "        h = self.linear1(input_array)\n",
-    "        y_pred = self.linear2(h)\n",
-    "        return y_pred"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Model training (meta-learning / episodic training)"
    ]
   },
@@ -173,53 +69,6 @@
    "metadata": {},
    "source": [
     "Episodic training simulates the few-shot learning scenario to train a prototypical network. Training data is organized into episodes that resemble few-shot tasks."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Training loop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Represents one epoch / episode of multiple tasks\n",
-    "    ## Each epoch produces a new model\n",
-    "def training_epoch (model, data_loader: DataLoader, optimizer: Optimizer, loss_fn, implementation = 'easyfsl'):\n",
-    "    all_loss = []\n",
-    "    model.train()\n",
-    "\n",
-    "    with tqdm(enumerate(data_loader), total = len(data_loader)) as tqdm_train:\n",
-    "        ## For each task, make prediction, calculate loss, update model params\n",
-    "        for task_idx, (support_data, support_labels, query_data, query_labels, _) in tqdm_train:\n",
-    "                       \n",
-    "            # print(f'Starting task {task_idx}')\n",
-    "            # print('support_data: ', support_data)\n",
-    "            # print('support_labels: ', support_labels)\n",
-    "            \n",
-    "            optimizer.zero_grad()\n",
-    "\n",
-    "            if implementation == 'easyfsl':\n",
-    "                model.process_support_set(support_data, support_labels)\n",
-    "                classification_scores = model.forward(query_data)\n",
-    "            else:\n",
-    "                classification_scores = model.forward(support_data, support_labels, query_data) ##TODO: Define method\n",
-    "            \n",
-    "\n",
-    "            task_loss = loss_fn(classification_scores, query_labels)\n",
-    "            task_loss.backward()\n",
-    "            optimizer.step()\n",
-    "\n",
-    "            all_loss.append(task_loss.item())\n",
-    "\n",
-    "            tqdm_train.set_postfix(loss = mean(all_loss))\n",
-    "    \n",
-    "    return mean(all_loss)"
    ]
   },
   {
@@ -247,11 +96,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Each task contains N_WAY * (N_SHOT + N_QUERY) samples\n",
     "N_WAY = 2\n",
-    "N_SHOT = 5\n",
-    "N_QUERY = 10\n",
+    "N_SHOT = 2\n",
+    "N_QUERY = 3\n",
     "\n",
-    "N_TASKS_PER_EPOCH = 100 \n",
+    "N_TASKS_PER_EPOCH = 10 \n",
     "N_VALIDATION_TASKS = 100 \n",
     "\n",
     "## Datasets need to be a FewShotDataset / torch Dataset with .get_labels\n",
@@ -296,7 +146,7 @@
     "\n",
     "## Optimizer\n",
     "backbone = DummyNetwork(in_dim = len(X_train.columns), hidden_dim = 256, out_dim = 4) ## TODO: What should the correct dimensions be?\n",
-    "model = PrototypicalNetworks(backbone)\n",
+    "model = PrototypicalNetworks(backbone, use_softmax = True)\n",
     "\n",
     "LEARNING_RATE = 0.001\n",
     "MOMENTUM = 0.9\n",
@@ -325,33 +175,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_EPOCHS = 200\n",
+    "N_EPOCHS = 100\n",
     "log_update_frequency = 10\n",
     "\n",
     "## Track best parameters (weights and biases) and performance of model\n",
     "best_state = model.state_dict()\n",
-    "best_validation_accuracy = 0.0\n",
+    "best_f1_score = 0.0\n",
     "\n",
     "for epoch in range(N_EPOCHS):\n",
     "    print(f'Epoch: {epoch}')\n",
     "    \n",
     "    average_epoch_loss = training_epoch(model, train_loader, train_optimizer, LOSS_FN)\n",
-    "    validation_accuracy = evaluate(model, validation_loader, device = 'cpu') ## TODO: Implement evaluate method that returns [actual_labels], [predictions]\n",
     "\n",
-    "    if validation_accuracy > best_validation_accuracy:\n",
-    "        best_validation_accuracy = validation_accuracy\n",
+    "    actuals, predictions, f1_score = evaluate_model(model, validation_loader)\n",
+    "    \n",
+    "    if f1_score > best_f1_score:\n",
+    "        best_f1_score = f1_score\n",
     "        best_state = model.state_dict()\n",
     "        print(\"Ding ding ding! We found a new best model!\")\n",
     "\n",
     "    tb_writer.add_scalar(\"Train/loss\", average_epoch_loss, epoch)\n",
-    "    tb_writer.add_scalar(\"Val/acc\", validation_accuracy, epoch)\n",
+    "    tb_writer.add_scalar('f1', f1_score, epoch)\n",
     "\n",
     "    ## Update the scheduler such that it knows when to adjust the learning rate\n",
     "    train_scheduler.step()\n",
     "\n",
     "\n",
     "## Retrieve the best model\n",
-    "missing_keys, unexpected_keys = model.load_state_dict(best_state)\n"
+    "missing_keys, unexpected_keys = model.load_state_dict(best_state)\n",
+    "print(f'Best f1-score after {N_EPOCHS} epochs of training: {best_f1_score}')\n"
    ]
   },
   {
