new implementation of hyperparameter tuning

--- a/few_shot_classifier.ipynb
+++ b/few_shot_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "from get_processed_data import get_processed_data\n",
     "from FSLMethods import form_datasets, training_epoch, evaluate_model\n",
     "from FSLDataset import FSLDataset\n",
-    "from FSLNetworks import DummyNetwork\n",
+    "from FSLNetworks import FeatureExtractor\n",
     "\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -41,21 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training set shape: (12335, 55) (12335,)\n",
-      "Validation set shape: (1542, 55) (1542,)\n",
-      "Test set shape: (1542, 55) (1542,)\n",
-      "Disclaimer: It is assumed that the label is the last column of the input dataframe... ...\n",
-      "Disclaimer: It is assumed that the label is the last column of the input dataframe... ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df, X_train, y_train, X_val, y_val, X_test, y_test = get_processed_data()\n",
     "\n",
@@ -86,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +135,7 @@
     "\n",
     "\n",
     "## Optimizer\n",
-    "backbone = DummyNetwork(in_dim = len(X_train.columns), hidden_dim = 256, out_dim = 4) ## TODO: What should the correct dimensions be?\n",
+    "backbone = FeatureExtractor(in_dim = len(X_train.columns), hidden_dim = 256, out_dim = 4) ## TODO: What should the correct dimensions be?\n",
     "model = PrototypicalNetworks(backbone, use_softmax = True)\n",
     "\n",
     "LEARNING_RATE = 0.001\n",
