--- a/few_shot_classifier_tuning.ipynb
+++ b/few_shot_classifier_tuning.ipynb
@@ -6,33 +6,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import random\n",
     "import warnings\n",
     "\n",
-    "import torch\n",
-    "from torch import nn, optim\n",
-    "from torch.optim.lr_scheduler import MultiStepLR\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "from easyfsl.samplers import TaskSampler\n",
-    "from easyfsl.utils import evaluate\n",
-    "from easyfsl.methods import FewShotClassifier, PrototypicalNetworks\n",
-    "\n",
-    "from ray import tune\n",
-    "\n",
-    "from statistics import mean\n",
-    "\n",
     "from get_processed_data import get_processed_data\n",
-    "from FSLMethods import form_datasets, training_epoch, evaluate_model\n",
-    "from FSLDataset import FSLDataset\n",
-    "from FSLNetworks import DummyNetwork\n",
-    "from FSLTrainer import fsl_trainer, fsl_tuner\n",
+    "from FSLMethods import form_datasets\n",
+    "from FSLTrainer import FSLTrainer\n",
     "\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preparing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train-Test-Validation split and sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df, X_train, y_train, X_val, y_val, X_test, y_test = get_processed_data()\n",
+    "\n",
+    "## Datasets need to be a FewShotDataset / torch Dataset with .get_labels\n",
+    "train_set, validation_set, test_set = form_datasets(X_train, y_train, X_val, y_val, X_test, y_test)"
    ]
   },
   {
@@ -53,25 +59,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set up"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "random_seed = 0\n",
-    "np.random.seed(random_seed)\n",
-    "torch.manual_seed(random_seed)\n",
-    "random.seed(random_seed)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Train and tune model"
    ]
   },
@@ -82,11 +69,22 @@
    "outputs": [],
    "source": [
     "config = {\n",
-    "    'n_shot': tune.sample_from(lambda _: 2 * np.random.randint(1, 6)), ## Try even numbers in [2, 10]\n",
-    "    'embedding_size': tune.sample_from(lambda _: 2 ** np.random.randint(2, 6)) ## Try {4, 8, 16, 32}\n",
+    "    'n_shot': [2 * x for x in range(1, 51)], ## Try even numbers in [2, 100]\n",
+    "    'embedding_size': [2 ** x for x in range(2, 6)] ## Try {4, 8, 16, 32}\n",
     "}\n",
+    "config\n",
     "\n",
-    "model_tuner = fsl_tuner(fsl_trainer, config, metric = 'recall')"
+    "trainer = FSLTrainer(train_set, validation_set, test_set, config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Key: Value = (k, embedding_size): (metric, model_params)\n",
+    "results, best_config = trainer.tune(metric = 'recall')"
    ]
   },
   {
@@ -94,6 +92,23 @@
    "metadata": {},
    "source": [
     "### Model evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get best model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, best_model_state = results[best_config]\n",
+    "trainer.test(best_model_state, {'n_shot': best_config[0], 'embedding_size': best_config[1]})"
    ]
   },
   {
