Deep learning results and removed Lasso model

--- a/Compile_Code.ipynb
+++ b/Compile_Code.ipynb
@@ -29,8 +29,7 @@
    "outputs": [],
    "source": [
     "combine_order = ['eda.ipynb', \"processing_metric_functions.ipynb\", 'logreg.ipynb', \n",
-    "                 'randomforest.ipynb', \"k_nearest_neighbours.ipynb\", \"Lasso Regularization.ipynb\", \n",
-    "                 \"deep_learning.ipynb\"]\n",
+    "                 'randomforest.ipynb', \"k_nearest_neighbours.ipynb\", \"deep_learning.ipynb\"]\n",
     "\n",
     "combine_order += [ ] ### Add few shot selection file here\n",
     "\n",
