debugging and updates to tune fsl model

--- a/few_shot_classifier_tuning.ipynb
+++ b/few_shot_classifier_tuning.ipynb
@@ -38,7 +38,7 @@
     "df, X_train, y_train, X_val, y_val, X_test, y_test = get_processed_data()\n",
     "\n",
     "## Datasets need to be a FewShotDataset / torch Dataset with .get_labels\n",
-    "train_set, validation_set, test_set = form_datasets(X_train, y_train, X_val, y_val, X_test, y_test)"
+    "train_set, validation_set, test_set = form_datasets(X_train, y_train, X_val, y_val, X_test, y_test, feature_selection = True, sampling_method = 'undersampling')\n"
    ]
   },
   {
@@ -69,10 +69,9 @@
    "outputs": [],
    "source": [
     "config = {\n",
-    "    'n_shot': [2 * x for x in range(1, 51)], ## Try even numbers in [2, 100]\n",
+    "    'n_shot': [2, 4, 8, 16, 32, 64], ## Try even numbers in [2, 100]\n",
     "    'embedding_size': [2 ** x for x in range(2, 6)] ## Try {4, 8, 16, 32}\n",
     "}\n",
-    "config\n",
     "\n",
     "trainer = FSLTrainer(train_set, validation_set, test_set, config)"
    ]
@@ -107,8 +106,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, best_model_state = results[best_config]\n",
-    "trainer.test(best_model_state, {'n_shot': best_config[0], 'embedding_size': best_config[1]})"
+    "## TODO: Get model that meets supervised learning performance\n",
+    "threshold = 0.7\n",
+    "min_k, relevant_embedding_size, relevant_model_state = 0, 0, None\n",
+    "\n",
+    "temp_list = [(k, embedding_size, metric, model_params) for (k, embedding_size), (metric, model_params) in results.items()]\n",
+    "temp_list = sorted(temp_list, key = lambda x: x[2])\n",
+    "for tup in temp_list:\n",
+    "    if tup[2] >= threshold:\n",
+    "        min_k = tup[0]\n",
+    "        relevant_embedding_size = tup[1]\n",
+    "        relevant_model_state = tup[3]\n",
+    "        break\n",
+    "\n",
+    "if relevant_model_state == None:\n",
+    "    print('Few shot learning classifier unable to match threshold, further tuning is required... ...')\n",
+    "else:\n",
+    "    print(f'Minimum k required to match performance threshold = {min_k}')"
    ]
   },
   {
@@ -117,7 +131,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# evaluate(model, test_loader) ##TODO: Implement method"
+    "# evaluate(model, test_loader) ##TODO: Implement method\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, best_model_state = results[best_config]\n",
+    "actuals, predictions = trainer.test(best_model_state, {'n_shot': best_config[0], 'embedding_size': best_config[1]})"
    ]
   }
  ],
