summarized fsl training and tuning for compilation

--- a/Compile_Code.ipynb
+++ b/Compile_Code.ipynb
@@ -31,7 +31,7 @@
     "combine_order = ['eda.ipynb', \"processing_metric_functions.ipynb\", 'logreg.ipynb', \n",
     "                 'randomforest.ipynb', \"k_nearest_neighbours.ipynb\", \"deep_learning.ipynb\"]\n",
     "\n",
-    "combine_order += [ ] ### Add few shot selection file here\n",
+    "combine_order += ['few_shot_classifier.ipynb' ] ### Add few shot selection file here\n",
     "\n",
     "combine_notebooks(combine_order, 'combined_notebooks.ipynb')"
    ]
