--- a/few_shot_classifier.ipynb
+++ b/few_shot_classifier.ipynb
@@ -1,33 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Few shot learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the limited amount of positive (fraudulent) data points available, we explored few-shot learning, which is a method that specialises in training with small training data. We implemented a classifier using prototypical networks as the underlying architecture. \n",
+    "\n",
+    "We hypothesized that a few shot classifier would be able to perform comparably to the previous supervised leraning models, while using less samples. To validate this, we will evaluate the classifier's performance on different values of k, where k is the number of examples of each class that is seen by the model during training."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set up"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import random\n",
     "import warnings\n",
     "\n",
-    "import torch\n",
-    "from torch import nn, optim\n",
-    "from torch.optim.lr_scheduler import MultiStepLR\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "from easyfsl.samplers import TaskSampler\n",
-    "from easyfsl.utils import evaluate\n",
-    "from easyfsl.methods import FewShotClassifier, PrototypicalNetworks\n",
-    "\n",
-    "from statistics import mean\n",
-    "\n",
     "from get_processed_data import get_processed_data\n",
-    "from FSLMethods import form_datasets, training_epoch, evaluate_model\n",
-    "from FSLDataset import FSLDataset\n",
-    "from FSLNetworks import FeatureExtractor\n",
+    "from FSLMethods import form_datasets\n",
+    "from FSLTrainer import FSLTrainer\n",
+    "from show_metrics import show_metrics\n",
     "\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -36,7 +43,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Splitting data"
+    "### Preparing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train-Test-Validation split"
    ]
   },
   {
@@ -45,10 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df, X_train, y_train, X_val, y_val, X_test, y_test = get_processed_data()\n",
-    "\n",
-    "## Datasets need to be a FewShotDataset / torch Dataset with .get_labels\n",
-    "train_set, validation_set = form_datasets(X_train, y_train, X_val, y_val, X_test, y_test)"
+    "df, X_train, y_train, X_val, y_val, X_test, y_test = get_processed_data()\n"
    ]
   },
   {
@@ -69,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set up"
+    "1. Determine whether to do feature selection, which method to sample with (if any), and what size the embedding of the prototypical network should be. k is initialized as a constant 5."
    ]
   },
   {
@@ -78,44 +89,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random_seed = 0\n",
-    "np.random.seed(random_seed)\n",
-    "torch.manual_seed(random_seed)\n",
-    "random.seed(random_seed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Each task contains N_WAY * (N_SHOT + N_QUERY) samples\n",
-    "N_WAY = 2\n",
-    "N_SHOT = 2\n",
-    "N_QUERY = 3\n",
+    "config_1 = {\n",
+    "    'n_shot': [5],\n",
+    "    'embedding_size': [2 ** x for x in range(2, 6)] ## Try {4, 8, 16, 32}\n",
+    "}\n",
+    "results_1 = {} ## key:value = (feature_selection, sampling_method):(recall, f1-score)\n",
+    "idx = 0\n",
     "\n",
-    "N_TASKS_PER_EPOCH = 10 \n",
-    "N_VALIDATION_TASKS = 100 \n",
+    "for feature_selection in [True, False]:\n",
+    "    for sampling_method in ['', 'oversampling', 'undersampling', 'smote']:\n",
+    "        print(f'##### Run {idx} #####')\n",
+    "        print(f'Feature selection: {feature_selection}, sampling method: {sampling_method}')\n",
+    "        train_set, validation_set, test_set = \\\n",
+    "            form_datasets(X_train, y_train, X_val, y_val, X_test, y_test, \n",
+    "                          feature_selection = feature_selection, sampling_method = sampling_method)\n",
+    "        trainer_1 = FSLTrainer(train_set, validation_set, test_set, config_1)\n",
     "\n",
-    "## Sampliers used to generate tasks\n",
-    "train_sampler = TaskSampler(dataset = train_set, n_way = N_WAY, n_shot = N_SHOT, \n",
-    "                            n_query = N_QUERY, n_tasks = N_TASKS_PER_EPOCH)\n",
-    "validation_sampler = TaskSampler(dataset = validation_set, n_way = N_WAY, n_shot = N_SHOT,\n",
-    "                                 n_query = N_QUERY, n_tasks = N_VALIDATION_TASKS)\n",
-    "\n",
-    "## Loader generates an iterable given a dataset and a sampler\n",
-    "train_loader = DataLoader(dataset = train_set, batch_sampler = train_sampler, pin_memory = True,\n",
-    "                          collate_fn = train_sampler.episodic_collate_fn)\n",
-    "validation_loader = DataLoader(dataset = validation_set, batch_sampler = validation_sampler, pin_memory = True,\n",
-    "                               collate_fn = validation_sampler.episodic_collate_fn)"
+    "        curr_results, best_config = trainer_1.tune(metric = 'recall')\n",
+    "        idx += 1\n",
+    "        # print(f'Results: Recall = {curr_results[best_config][0]}, best embedding size = {best_config[1]}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initializing optimizer, loss function, etc"
+    "From the above results, the best recall was obtained by the model that used feature selection and undersampling, and had an embedding size of 32 (ie the feature extractor of the prototypical network embeds inputs into vectors of size 32). We will now experiment with various values of k."
    ]
   },
   {
@@ -124,84 +123,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Loss fn\n",
-    "LOSS_FN = nn.CrossEntropyLoss()\n",
+    "train_set, validation_set, test_set = \\\n",
+    "    form_datasets(X_train, y_train, X_val, y_val, X_test, y_test, \n",
+    "                  feature_selection = True, sampling_method = 'undersampling')\n",
     "\n",
+    "config_2 = {\n",
+    "    'n_shot': [4 * x for x in range(1, 17)],\n",
+    "    'embedding_size': [32]\n",
+    "}\n",
     "\n",
-    "## Scheduler\n",
-    "    ## Scales learning rate by gamma at the designated milestones\n",
-    "scheduler_milestones = [70, 85]\n",
-    "scheduler_gamma = 0.1\n",
-    "\n",
-    "\n",
-    "## Optimizer\n",
-    "backbone = FeatureExtractor(in_dim = len(X_train.columns), hidden_dim = 256, out_dim = 4) ## TODO: What should the correct dimensions be?\n",
-    "model = PrototypicalNetworks(backbone, use_softmax = True)\n",
-    "\n",
-    "LEARNING_RATE = 0.001\n",
-    "MOMENTUM = 0.9\n",
-    "DECAY = 5e-4\n",
-    "train_optimizer = optim.SGD(params = model.parameters(), lr = LEARNING_RATE, momentum = MOMENTUM, \n",
-    "                            weight_decay = DECAY)\n",
-    "train_scheduler = MultiStepLR(optimizer = train_optimizer, milestones = scheduler_milestones,\n",
-    "                              gamma = scheduler_gamma)\n",
-    "\n",
-    "\n",
-    "## Writer\n",
-    "log_dir = 'fsl_logs'\n",
-    "tb_writer = SummaryWriter(log_dir = log_dir)\n"
+    "trainer_2 = FSLTrainer(train_set, validation_set, test_set, config_2)\n",
+    "results, best_config = trainer_2.tune(metric = 'recall') ## Key:Value = (k, embedding_size):(metric, model_params)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N_EPOCHS = 100\n",
-    "log_update_frequency = 10\n",
-    "\n",
-    "## Track best parameters (weights and biases) and performance of model\n",
-    "best_state = model.state_dict()\n",
-    "best_f1_score = 0.0\n",
-    "best_recall = 0.0\n",
-    "\n",
-    "for epoch in range(N_EPOCHS):\n",
-    "    print(f'Epoch: {epoch}')\n",
-    "    \n",
-    "    average_epoch_loss = training_epoch(model, train_loader, train_optimizer, LOSS_FN)\n",
-    "\n",
-    "    actuals, predictions, _, _, recall, _, f1_score = evaluate_model(model, validation_loader)\n",
-    "    \n",
-    "    if f1_score > best_f1_score:\n",
-    "        best_f1_score = f1_score\n",
-    "        # best_state = model.state_dict()\n",
-    "        # print(\"Ding ding ding! We found a new best model!\")\n",
-    "\n",
-    "    if recall > best_recall:\n",
-    "        best_recall = recall\n",
-    "        best_state = model.state_dict()\n",
-    "        print(\"Ding ding ding! We found a new best model!\")\n",
-    "\n",
-    "    tb_writer.add_scalar(\"Train/loss\", average_epoch_loss, epoch)\n",
-    "    tb_writer.add_scalar('F1', f1_score, epoch)\n",
-    "    tb_writer.add_scalar('Recall', recall, epoch)\n",
-    "\n",
-    "    ## Update the scheduler such that it knows when to adjust the learning rate\n",
-    "    train_scheduler.step()\n",
-    "\n",
-    "\n",
-    "## Retrieve the best model\n",
-    "missing_keys, unexpected_keys = model.load_state_dict(best_state)\n",
-    "print(f'Best f1-score after {N_EPOCHS} epochs of training: {best_f1_score}')\n",
-    "print(f'Best recall after {N_EPOCHS} epochs of training: {best_recall}')\n"
+    "Thus, we will take the optimal k to be 48, and the optimal embedding size to be 32. "
    ]
   },
   {
@@ -212,12 +151,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will now determine the minimum k required to match the performance of the supervised learning models. This is done by evaluating the previously trained models on the testing set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# evaluate(model, test_loader) ##TODO: Implement method"
+    "## Get trained models for each k\n",
+    "threshold = 0.75\n",
+    "temp_list = [(k, embedding_size, metric, model_params) for (k, embedding_size), (metric, model_params) in results.items()]\n",
+    "temp_list = sorted(temp_list, key = lambda x: x[0])\n",
+    "\n",
+    "relevant_actuals = []\n",
+    "relevant_predictions = []\n",
+    "\n",
+    "for curr_k, curr_size, _, curr_params in temp_list:\n",
+    "    curr_config = {\n",
+    "        'n_shot': curr_k,\n",
+    "        'embedding_size': curr_size\n",
+    "    }\n",
+    "    test_metrics = trainer_2.test(curr_params, curr_config)\n",
+    "    if test_metrics.recall > threshold:\n",
+    "        print(f'Minimum k required to match performance threshold = {curr_k}')\n",
+    "        show_metrics(actual = test_metrics.actuals, predicted = test_metrics.predictions, pos_label = 1, neg_label = 0)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate(model, test_loader) ##TODO: Implement method\n"
    ]
   }
  ],
