added metric auc for fsl, set random seed

--- a/few_shot_classifier.ipynb
+++ b/few_shot_classifier.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Determine whether to do feature selection, which method to sample with (if any), and what size the embedding of the prototypical network should be. k is initialized as a constant 5."
+    "Firstly, we determine whether to do feature selection, which method to sample with (if any), and what size the embedding of the prototypical network should be. k is initialized as a constant 10."
    ]
   },
   {
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "config_1 = {\n",
-    "    'n_shot': [5],\n",
+    "    'n_shot': [10],\n",
     "    'embedding_size': [2 ** x for x in range(2, 6)] ## Try {4, 8, 16, 32}\n",
     "}\n",
     "results_1 = {} ## key:value = (feature_selection, sampling_method):(recall, f1-score)\n",
@@ -106,6 +106,7 @@
     "        trainer_1 = FSLTrainer(train_set, validation_set, test_set, config_1)\n",
     "\n",
     "        curr_results, best_config = trainer_1.tune(metric = 'recall')\n",
+    "        print(f'Precision: {curr_results[best_config][0].precision}, F1: {curr_results[best_config][0].f1_score}, AUC: {curr_results[best_config][0].auc}')\n",
     "        idx += 1\n",
     "        # print(f'Results: Recall = {curr_results[best_config][0]}, best embedding size = {best_config[1]}')"
    ]
@@ -114,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above results, the best recall was obtained by the model that used feature selection and undersampling, and had an embedding size of 32 (ie the feature extractor of the prototypical network embeds inputs into vectors of size 32). We will now experiment with various values of k."
+    "From the above results, the best recall was obtained by the model that used feature selection and sampling with SMOTE, and had an embedding size of 8 (ie the feature extractor of the prototypical network embeds inputs into vectors of size 8). We will now experiment with various values of k."
    ]
   },
   {
@@ -125,11 +126,11 @@
    "source": [
     "train_set, validation_set, test_set = \\\n",
     "    form_datasets(X_train, y_train, X_val, y_val, X_test, y_test, \n",
-    "                  feature_selection = True, sampling_method = 'undersampling')\n",
+    "                  feature_selection = True, sampling_method = 'smote')\n",
     "\n",
     "config_2 = {\n",
     "    'n_shot': [4 * x for x in range(1, 17)],\n",
-    "    'embedding_size': [32]\n",
+    "    'embedding_size': [8]\n",
     "}\n",
     "\n",
     "trainer_2 = FSLTrainer(train_set, validation_set, test_set, config_2)\n",
@@ -140,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus, we will take the optimal k to be 48, and the optimal embedding size to be 32. "
+    "Thus, we will take the optimal k to be 48, and the optimal embedding size to be 8. "
    ]
   },
   {
@@ -154,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now determine the minimum k required to match the performance of the supervised learning models. This is done by evaluating the previously trained models on the testing set."
+    "We will now determine the minimum k required to match the performance of the supervised learning models. This is done by evaluating the previously trained models on the testing set. Based on the performance of our other models, a threshold of 0.8 for the recall has been set."
    ]
   },
   {
@@ -164,7 +165,7 @@
    "outputs": [],
    "source": [
     "## Get trained models for each k\n",
-    "threshold = 0.75\n",
+    "threshold = 0.8\n",
     "temp_list = [(k, embedding_size, metric, model_params) for (k, embedding_size), (metric, model_params) in results.items()]\n",
     "temp_list = sorted(temp_list, key = lambda x: x[0])\n",
     "\n",
@@ -181,15 +182,6 @@
     "        print(f'Minimum k required to match performance threshold = {curr_k}')\n",
     "        show_metrics(actual = test_metrics.actuals, predicted = test_metrics.predictions, pos_label = 1, neg_label = 0)\n",
     "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# evaluate(model, test_loader) ##TODO: Implement method\n"
    ]
   }
  ],
