minor tweaks to fsl classifier

--- a/few_shot_classifier.ipynb
+++ b/few_shot_classifier.ipynb
@@ -129,8 +129,8 @@
     "                  feature_selection = True, sampling_method = 'smote')\n",
     "\n",
     "config_2 = {\n",
-    "    'n_shot': [4 * x for x in range(1, 17)],\n",
-    "    'embedding_size': [8]\n",
+    "    'n_shot': [4, 8, 16, 24, 32, 48, 64],\n",
+    "    'embedding_size': [32]\n",
     "}\n",
     "\n",
     "trainer_2 = FSLTrainer(train_set, validation_set, test_set, config_2)\n",
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now determine the minimum k required to match the performance of the supervised learning models. This is done by evaluating the previously trained models on the testing set. Based on the performance of our other models, a threshold of 0.8 for the recall has been set."
+    "We will now determine the minimum k required to match the performance of the supervised learning models. This is done by evaluating the previously trained models on the testing set. Based on the performance of our other models, a threshold of 0.75 for the recall has been set."
    ]
   },
   {
@@ -165,7 +165,7 @@
    "outputs": [],
    "source": [
     "## Get trained models for each k\n",
-    "threshold = 0.8\n",
+    "threshold = 0.7\n",
     "temp_list = [(k, embedding_size, metric, model_params) for (k, embedding_size), (metric, model_params) in results.items()]\n",
     "temp_list = sorted(temp_list, key = lambda x: x[0])\n",
     "\n",
